--- a/ExpressCrashCourse/public/index.html
+++ b/ExpressCrashCourse/public/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>My Website</title>
   </head>
   <body>
-    <h1>Hello My Website</h1>
+    <h1>My Website</h1>
   </body>
 </html>
